# PeTar

sevn-interface/SEVN/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.txt  compile.sh  ic.ic  listSin.txt
sevn-interface/SEVN/.run/: fiducial.run.xml
sevn-interface/SEVN/cmake/: check_debug.cmake  check_flags.cmake  check_h5.cmake  check_opnemp.cmake  check_stdfunctions.cmake  generate_doc.cmake
sevn-interface/SEVN/doc/: config_file
sevn-interface/SEVN/doc/doxyfiles/html/: _binary_property_8cpp.html  _binary_property_8h.html  _binary_property_8h_source.html  _h5out_8cpp.html  _h5out_8h.html  _h5out_8h_source.html  _i_o_8cpp.html  _i_o_8h.html  _i_o_8h_source.html  _orbit_8cpp.html  _orbit_8h.html  _orbit_8h_source.html  _processes_8cpp.html  _processes_8h.html  _processes_8h_source.html  annotated.html  binstar_8cpp.html  binstar_8h.html  binstar_8h_source.html  class___r_l-members.html  class___r_l.html  class_ang_mom-members.html  class_ang_mom.html  class_b_timestep-members.html  class_b_timestep.html  class_b_worldtime-members.html  class_b_worldtime.html  class_binary_property-members.html  class_binary_property.html  class_binstar-members.html  class_binstar.html  class_common_envelope-members.html  class_common_envelope.html  class_csup-members.html  class_csup.html  class_depthconv-members.html  class_depthconv.html  class_derivative___property-members.html  class_derivative___property.html  class_derived___property-members.html  (+426 more)
sevn-interface/SEVN/doc/doxyfiles/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+127 more)
sevn-interface/SEVN/doc/doxyfiles/latex/: _binary_property_8cpp.tex  _binary_property_8h.tex  _h5out_8cpp.tex  _h5out_8h.tex  _i_o_8cpp.tex  _i_o_8h.tex  _orbit_8cpp.tex  _orbit_8h.tex  _processes_8cpp.tex  _processes_8h.tex  annotated.tex  binstar_8cpp.tex  binstar_8h.tex  class___r_l.eps  class___r_l.tex  class_ang_mom.eps  class_ang_mom.tex  class_b_timestep.eps  class_b_timestep.tex  class_b_worldtime.eps  class_b_worldtime.tex  class_binary_property.eps  class_binary_property.tex  class_binstar.tex  class_common_envelope.eps  class_common_envelope.tex  class_csup.eps  class_csup.tex  class_depthconv.eps  class_depthconv.tex  class_derivative___property.eps  class_derivative___property.tex  class_derived___property.eps  class_derived___property.tex  class_derived___property___binary.eps  class_derived___property___binary.tex  class_ebind.eps  class_ebind.tex  class_eccentricity.eps  class_eccentricity.tex  (+276 more)
sevn-interface/SEVN/hdf5_interpreter/: CMakeLists.txt  FindReadline.cmake  TODO  main.cpp
sevn-interface/SEVN/hdf5_interpreter/include/: LoadDataset.h  LoadSStars.h  Plot.h  Query.h  Quit.h  command.h  global.h  processor.h
sevn-interface/SEVN/hdf5_interpreter/python_cxx/: compile  main.cpp  plot_matplotlib.h
sevn-interface/SEVN/hdf5_interpreter/src/: LoadDataset.cpp  Plot.cpp  Query.cpp
sevn-interface/SEVN/include/: timestepcontrol.h.bkp
sevn-interface/SEVN/include/binstar/: BinaryProperty.h  MTstability.h  Orbit.h  Processes.h  binstar.h  qcrit.h
sevn-interface/SEVN/include/binstar/procs/: Collision.h
sevn-interface/SEVN/include/general/: IO.h  lookup_and_phases.h  params.h  starparameter.h  static_main.h  types.h
sevn-interface/SEVN/include/general/utils/: errhand.h  evolve.h  sevnlog.h  utilities.h
sevn-interface/SEVN/include/h5out/: H5out.h
sevn-interface/SEVN/include/star/: BSEintegrator.h  property.h  remnant.h  star.h  star.h.bkp
sevn-interface/SEVN/include/star/lambdas/: lambda_base.h  lambda_klencki21.h  lambda_nanjing.h
sevn-interface/SEVN/include/star/procs/: kicks.h  supernova.h
sevn-interface/SEVN/main/: CMakeLists.txt  sevn.cpp  sevnB.cpp  sevnB_oldversion.cpp  sevn_oldversion.cpp
sevn-interface/SEVN/pyscript/: input_to_sevn1  input_to_sevn2  mobse_to_sevn.py  output_cob_analysis.py  pymake_unique_file  sevnplot.py  tables_validator.py
sevn-interface/SEVN/resources/SEVN_tutorial/examples/: generate_IC.py
sevn-interface/SEVN/resources/SEVN_walkthrough/running_folder/: analysis_0_dask.py  analysis_0_pandas.py  analysis_2_dask.py  analysis_2_pandas.py  analysis_3_dask.py  analysis_3_pandas.py  analysis_4_dask.py  analysis_tdelay_pandas.py  compile.sh  run.sh
sevn-interface/SEVN/resources/conda_sevn_environment_for_linux/: conda_sevn_env.txt
sevn-interface/SEVN/run_scripts/: run.sh  run_sse.sh
sevn-interface/SEVN/src/: CMakeLists.txt  timestepcontrol.cpp.bkp
sevn-interface/SEVN/src/binstar/: BinaryProperty.cpp  MTstability.cpp  Orbit.cpp  Processes.cpp  binstar.cpp  qcrit.cpp
sevn-interface/SEVN/src/binstar/procs/: Collision.cpp
sevn-interface/SEVN/src/general/: IO.cpp  lookup_and_phases.cpp  params.cpp  starparameter.cpp
sevn-interface/SEVN/src/general/utils/: evolve.cpp  sevnlog.cpp  utilities.cpp
sevn-interface/SEVN/src/h5out/: H5out.cpp
sevn-interface/SEVN/src/star/: globalproperties.cpp  property.cpp  remnant.cpp  star.cpp  star.cpp.bkp
sevn-interface/SEVN/src/star/lambdas/: lambda_klencki21.cpp  lambda_nanjing.cpp
sevn-interface/SEVN/src/star/procs/: kicks.cpp  supernova.cpp
sevn-interface/SEVN/test/: CMakeLists.txt  sevn_test.cpp
sevn-interface/SEVN/test/include/binstar/: binstar_test.h
sevn-interface/SEVN/test/include/general/: IO_test.h
sevn-interface/SEVN/test/include/utility/: utility_test.h
(+49 files in other folders)
